# sorceress

./: .gitignore  CONTRIBUTING.md  Cargo.toml
src/: lib.rs  pattern.rs  scheduler.rs  server.rs  synthdef.rs  ugen.rs  vectree.rs
src/pattern/: player.rs
src/server/: osc_router.rs
src/synthdef/: decoder.rs  encoder.rs
src/ugen/: envelope.rs
tests/: synthdef_test.rs
