[package]
name = "sorceress"
version = "0.2.2"
authors = ["Wesley Merkel <ooesili@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ooesili/sorceress"
readme = "README.md"
description = "A Rust environment for making music and sounds with SuperCollider."
keywords = ["audio", "bindings", "creative", "music", "supercollider"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"

exclude = [".semaphore/*", "assets/*", "ci/*", "default.nix", "nix/*"]

[dependencies]
rosc = "0.11.4"
log = "0.4.27"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
